simdX86/c2nimsrc/simdAvx.h

__m256 _mm256_dp_ps (__m256 a, __m256 b, const int imm8);
__int16 _mm256_extract_epi16 (__m256i a, const int index);
__int32 _mm256_extract_epi32 (__m256i a, const int index);
__int64 _mm256_extract_epi64 (__m256i a, const int index);
__int8 _mm256_extract_epi8 (__m256i a, const int index);
__m128d _mm256_extractf128_pd (__m256d a, const int imm8);
__m128 _mm256_extractf128_ps (__m256 a, const int imm8);
__m128i _mm256_extractf128_si256 (__m256i a, const int imm8);
__m128i _mm256_extracti128_si256 (__m256i a, const int imm8);
__m256d _mm256_floor_pd (__m256d a);
__m256 _mm256_floor_ps (__m256 a);
__m128d _mm_fmadd_pd (__m128d a, __m128d b, __m128d c);
__m256d _mm256_fmadd_pd (__m256d a, __m256d b, __m256d c);
__m128 _mm_fmadd_ps (__m128 a, __m128 b, __m128 c);
__m256 _mm256_fmadd_ps (__m256 a, __m256 b, __m256 c);
__m128d _mm_fmadd_sd (__m128d a, __m128d b, __m128d c);
__m128 _mm_fmadd_ss (__m128 a, __m128 b, __m128 c);
__m128d _mm_fmaddsub_pd (__m128d a, __m128d b, __m128d c);
__m256d _mm256_fmaddsub_pd (__m256d a, __m256d b, __m256d c);
__m128 _mm_fmaddsub_ps (__m128 a, __m128 b, __m128 c);
__m256 _mm256_fmaddsub_ps (__m256 a, __m256 b, __m256 c);
__m128d _mm_fmsub_pd (__m128d a, __m128d b, __m128d c);
__m256d _mm256_fmsub_pd (__m256d a, __m256d b, __m256d c);
__m128 _mm_fmsub_ps (__m128 a, __m128 b, __m128 c);
__m256 _mm256_fmsub_ps (__m256 a, __m256 b, __m256 c);
__m128d _mm_fmsub_sd (__m128d a, __m128d b, __m128d c);
__m128 _mm_fmsub_ss (__m128 a, __m128 b, __m128 c);
__m128d _mm_fmsubadd_pd (__m128d a, __m128d b, __m128d c);
__m256d _mm256_fmsubadd_pd (__m256d a, __m256d b, __m256d c);
__m128 _mm_fmsubadd_ps (__m128 a, __m128 b, __m128 c);
__m256 _mm256_fmsubadd_ps (__m256 a, __m256 b, __m256 c);
__m128d _mm_fnmadd_pd (__m128d a, __m128d b, __m128d c);
__m256d _mm256_fnmadd_pd (__m256d a, __m256d b, __m256d c);
__m128 _mm_fnmadd_ps (__m128 a, __m128 b, __m128 c);
__m256 _mm256_fnmadd_ps (__m256 a, __m256 b, __m256 c);
__m128d _mm_fnmadd_sd (__m128d a, __m128d b, __m128d c);
__m128 _mm_fnmadd_ss (__m128 a, __m128 b, __m128 c);
__m128d _mm_fnmsub_pd (__m128d a, __m128d b, __m128d c);
__m256d _mm256_fnmsub_pd (__m256d a, __m256d b, __m256d c);
__m128 _mm_fnmsub_ps (__m128 a, __m128 b, __m128 c);
__m256 _mm256_fnmsub_ps (__m256 a, __m256 b, __m256 c);
__m128d _mm_fnmsub_sd (__m128d a, __m128d b, __m128d c);
__m128 _mm_fnmsub_ss (__m128 a, __m128 b, __m128 c);
__m256i _mm256_hadd_epi16 (__m256i a, __m256i b);
__m256i _mm256_hadd_epi32 (__m256i a, __m256i b);
__m256d _mm256_hadd_pd (__m256d a, __m256d b);
__m256 _mm256_hadd_ps (__m256 a, __m256 b);
__m256i _mm256_hadds_epi16 (__m256i a, __m256i b);
__m256i _mm256_hsub_epi16 (__m256i a, __m256i b);
__m256i _mm256_hsub_epi32 (__m256i a, __m256i b);
__m256d _mm256_hsub_pd (__m256d a, __m256d b);
__m256 _mm256_hsub_ps (__m256 a, __m256 b);
__m256i _mm256_hsubs_epi16 (__m256i a, __m256i b);
__m128i _mm_i32gather_epi32 (int const* base_addr, __m128i vindex, const int scale);
__m128i _mm_mask_i32gather_epi32 (__m128i src, int const* base_addr, __m128i vindex, __m128i mask, const int scale);
__m256i _mm256_i32gather_epi32 (int const* base_addr, __m256i vindex, const int scale);
__m256i _mm256_mask_i32gather_epi32 (__m256i src, int const* base_addr, __m256i vindex, __m256i mask, const int scale);
__m128i _mm_i32gather_epi64 (__int64 const* base_addr, __m128i vindex, const int scale);
__m128i _mm_mask_i32gather_epi64 (__m128i src, __int64 const* base_addr, __m128i vindex, __m128i mask, const int scale);
__m256i _mm256_i32gather_epi64 (__int64 const* base_addr, __m128i vindex, const int scale);
__m256i _mm256_mask_i32gather_epi64 (__m256i src, __int64 const* base_addr, __m128i vindex, __m256i mask, const int scale);
__m128d _mm_i32gather_pd (double const* base_addr, __m128i vindex, const int scale);
__m128d _mm_mask_i32gather_pd (__m128d src, double const* base_addr, __m128i vindex, __m128d mask, const int scale);
__m256d _mm256_i32gather_pd (double const* base_addr, __m128i vindex, const int scale);
__m256d _mm256_mask_i32gather_pd (__m256d src, double const* base_addr, __m128i vindex, __m256d mask, const int scale);
__m128 _mm_i32gather_ps (float const* base_addr, __m128i vindex, const int scale);
__m128 _mm_mask_i32gather_ps (__m128 src, float const* base_addr, __m128i vindex, __m128 mask, const int scale);
__m256 _mm256_i32gather_ps (float const* base_addr, __m256i vindex, const int scale);
__m256 _mm256_mask_i32gather_ps (__m256 src, float const* base_addr, __m256i vindex, __m256 mask, const int scale);
__m128i _mm_i64gather_epi32 (int const* base_addr, __m128i vindex, const int scale);
__m128i _mm_mask_i64gather_epi32 (__m128i src, int const* base_addr, __m128i vindex, __m128i mask, const int scale);
__m128i _mm256_i64gather_epi32 (int const* base_addr, __m256i vindex, const int scale);
__m128i _mm256_mask_i64gather_epi32 (__m128i src, int const* base_addr, __m256i vindex, __m128i mask, const int scale);
__m128i _mm_i64gather_epi64 (__int64 const* base_addr, __m128i vindex, const int scale);
__m128i _mm_mask_i64gather_epi64 (__m128i src, __int64 const* base_addr, __m128i vindex, __m128i mask, const int scale);
__m256i _mm256_i64gather_epi64 (__int64 const* base_addr, __m256i vindex, const int scale);
__m256i _mm256_mask_i64gather_epi64 (__m256i src, __int64 const* base_addr, __m256i vindex, __m256i mask, const int scale);
__m128d _mm_i64gather_pd (double const* base_addr, __m128i vindex, const int scale);
__m128d _mm_mask_i64gather_pd (__m128d src, double const* base_addr, __m128i vindex, __m128d mask, const int scale);
__m256d _mm256_i64gather_pd (double const* base_addr, __m256i vindex, const int scale);
__m256d _mm256_mask_i64gather_pd (__m256d src, double const* base_addr, __m256i vindex, __m256d mask, const int scale);
__m128 _mm_i64gather_ps (float const* base_addr, __m128i vindex, const int scale);
__m128 _mm_mask_i64gather_ps (__m128 src, float const* base_addr, __m128i vindex, __m128 mask, const int scale);
__m128 _mm256_i64gather_ps (float const* base_addr, __m256i vindex, const int scale);
__m128 _mm256_mask_i64gather_ps (__m128 src, float const* base_addr, __m256i vindex, __m128 mask, const int scale);
__m256i _mm256_insert_epi16 (__m256i a, __int16 i, const int index);
__m256i _mm256_insert_epi32 (__m256i a, __int32 i, const int index);