simdX86/simdAvxGeneric.nim

proc dp*(a: m256; b: m256; imm8: cint): m256 {.importc: "_mm256_dp_ps",
                                       header: "immintrin.h".}
proc extract_epi16*(a: m256i; index: cint): int16 {.importc: "_mm256_extract_epi16",
    header: "immintrin.h".}
proc extract_epi32*(a: m256i; index: cint): int32 {.importc: "_mm256_extract_epi32",
    header: "immintrin.h".}
proc extract_epi64*(a: m256i; index: cint): int64 {.importc: "_mm256_extract_epi64",
    header: "immintrin.h".}
proc extract_epi8*(a: m256i; index: cint): int8 {.importc: "_mm256_extract_epi8",
    header: "immintrin.h".}
proc extractf128*(a: m256d; imm8: cint): m128d {.importc: "_mm256_extractf128_pd",
    header: "immintrin.h".}
proc extractf128*(a: m256; imm8: cint): m128 {.importc: "_mm256_extractf128_ps",
    header: "immintrin.h".}
proc extractf128_si256*(a: m256i; imm8: cint): m128i {.
    importc: "_mm256_extractf128_si256", header: "immintrin.h".}
proc extracti128_si256*(a: m256i; imm8: cint): m128i {.
    importc: "_mm256_extracti128_si256", header: "immintrin.h".}
proc floor*(a: m256d): m256d {.importc: "_mm256_floor_pd", header: "immintrin.h".}
proc floor*(a: m256): m256 {.importc: "_mm256_floor_ps", header: "immintrin.h".}
proc fmadd*(a: m128d; b: m128d; c: m128d): m128d {.importc: "_mm_fmadd_pd",
    header: "immintrin.h".}
proc fmadd*(a: m256d; b: m256d; c: m256d): m256d {.importc: "_mm256_fmadd_pd",
    header: "immintrin.h".}
proc fmadd*(a: m128; b: m128; c: m128): m128 {.importc: "_mm_fmadd_ps",
                                       header: "immintrin.h".}
proc fmadd*(a: m256; b: m256; c: m256): m256 {.importc: "_mm256_fmadd_ps",
                                       header: "immintrin.h".}
proc fmadd_sd*(a: m128d; b: m128d; c: m128d): m128d {.importc: "_mm_fmadd_sd",
    header: "immintrin.h".}
proc fmadd_ss*(a: m128; b: m128; c: m128): m128 {.importc: "_mm_fmadd_ss",
    header: "immintrin.h".}
proc fmaddsub*(a: m128d; b: m128d; c: m128d): m128d {.importc: "_mm_fmaddsub_pd",
    header: "immintrin.h".}
proc fmaddsub*(a: m256d; b: m256d; c: m256d): m256d {.importc: "_mm256_fmaddsub_pd",
    header: "immintrin.h".}
proc fmaddsub*(a: m128; b: m128; c: m128): m128 {.importc: "_mm_fmaddsub_ps",
    header: "immintrin.h".}
proc fmaddsub*(a: m256; b: m256; c: m256): m256 {.importc: "_mm256_fmaddsub_ps",
    header: "immintrin.h".}
proc fmsub*(a: m128d; b: m128d; c: m128d): m128d {.importc: "_mm_fmsub_pd",
    header: "immintrin.h".}
proc fmsub*(a: m256d; b: m256d; c: m256d): m256d {.importc: "_mm256_fmsub_pd",
    header: "immintrin.h".}
proc fmsub*(a: m128; b: m128; c: m128): m128 {.importc: "_mm_fmsub_ps",
                                       header: "immintrin.h".}
proc fmsub*(a: m256; b: m256; c: m256): m256 {.importc: "_mm256_fmsub_ps",
                                       header: "immintrin.h".}
proc fmsub_sd*(a: m128d; b: m128d; c: m128d): m128d {.importc: "_mm_fmsub_sd",
    header: "immintrin.h".}
proc fmsub_ss*(a: m128; b: m128; c: m128): m128 {.importc: "_mm_fmsub_ss",
    header: "immintrin.h".}
proc fmsubadd*(a: m128d; b: m128d; c: m128d): m128d {.importc: "_mm_fmsubadd_pd",
    header: "immintrin.h".}
proc fmsubadd*(a: m256d; b: m256d; c: m256d): m256d {.importc: "_mm256_fmsubadd_pd",
    header: "immintrin.h".}
proc fmsubadd*(a: m128; b: m128; c: m128): m128 {.importc: "_mm_fmsubadd_ps",
    header: "immintrin.h".}
proc fmsubadd*(a: m256; b: m256; c: m256): m256 {.importc: "_mm256_fmsubadd_ps",
    header: "immintrin.h".}
proc fnmadd*(a: m128d; b: m128d; c: m128d): m128d {.importc: "_mm_fnmadd_pd",
    header: "immintrin.h".}
proc fnmadd*(a: m256d; b: m256d; c: m256d): m256d {.importc: "_mm256_fnmadd_pd",
    header: "immintrin.h".}
proc fnmadd*(a: m128; b: m128; c: m128): m128 {.importc: "_mm_fnmadd_ps",
                                        header: "immintrin.h".}
proc fnmadd*(a: m256; b: m256; c: m256): m256 {.importc: "_mm256_fnmadd_ps",
                                        header: "immintrin.h".}
proc fnmadd_sd*(a: m128d; b: m128d; c: m128d): m128d {.importc: "_mm_fnmadd_sd",
    header: "immintrin.h".}
proc fnmadd_ss*(a: m128; b: m128; c: m128): m128 {.importc: "_mm_fnmadd_ss",
    header: "immintrin.h".}
proc fnmsub*(a: m128d; b: m128d; c: m128d): m128d {.importc: "_mm_fnmsub_pd",
    header: "immintrin.h".}
proc fnmsub*(a: m256d; b: m256d; c: m256d): m256d {.importc: "_mm256_fnmsub_pd",
    header: "immintrin.h".}
proc fnmsub*(a: m128; b: m128; c: m128): m128 {.importc: "_mm_fnmsub_ps",
                                        header: "immintrin.h".}
proc fnmsub*(a: m256; b: m256; c: m256): m256 {.importc: "_mm256_fnmsub_ps",
                                        header: "immintrin.h".}
proc fnmsub_sd*(a: m128d; b: m128d; c: m128d): m128d {.importc: "_mm_fnmsub_sd",
    header: "immintrin.h".}
proc fnmsub_ss*(a: m128; b: m128; c: m128): m128 {.importc: "_mm_fnmsub_ss",
    header: "immintrin.h".}
proc hadd_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_hadd_epi16",
                                        header: "immintrin.h".}
proc hadd_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_hadd_epi32",
                                        header: "immintrin.h".}
proc hadd*(a: m256d; b: m256d): m256d {.importc: "_mm256_hadd_pd", header: "immintrin.h".}
proc hadd*(a: m256; b: m256): m256 {.importc: "_mm256_hadd_ps", header: "immintrin.h".}
proc hadds_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_hadds_epi16",
    header: "immintrin.h".}
proc hsub_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_hsub_epi16",
                                        header: "immintrin.h".}
proc hsub_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_hsub_epi32",
                                        header: "immintrin.h".}
proc hsub*(a: m256d; b: m256d): m256d {.importc: "_mm256_hsub_pd", header: "immintrin.h".}
proc hsub*(a: m256; b: m256): m256 {.importc: "_mm256_hsub_ps", header: "immintrin.h".}
proc hsubs_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_hsubs_epi16",
    header: "immintrin.h".}
proc i32gather_epi32*(base_addr: ptr cint; vindex: m128i; scale: cint): m128i {.
    importc: "_mm_i32gather_epi32", header: "immintrin.h".}
proc mask_i32gather_epi32*(src: m128i; base_addr: ptr cint; vindex: m128i; mask: m128i;
                          scale: cint): m128i {.
    importc: "_mm_mask_i32gather_epi32", header: "immintrin.h".}
proc i32gather_epi32*(base_addr: ptr cint; vindex: m256i; scale: cint): m256i {.
    importc: "_mm256_i32gather_epi32", header: "immintrin.h".}
proc mask_i32gather_epi32*(src: m256i; base_addr: ptr cint; vindex: m256i; mask: m256i;
                          scale: cint): m256i {.
    importc: "_mm256_mask_i32gather_epi32", header: "immintrin.h".}
proc i32gather_epi64*(base_addr: ptr int64; vindex: m128i; scale: cint): m128i {.
    importc: "_mm_i32gather_epi64", header: "immintrin.h".}
proc mask_i32gather_epi64*(src: m128i; base_addr: ptr int64; vindex: m128i; mask: m128i;
                          scale: cint): m128i {.
    importc: "_mm_mask_i32gather_epi64", header: "immintrin.h".}
proc i32gather_epi64*(base_addr: ptr int64; vindex: m128i; scale: cint): m256i {.
    importc: "_mm256_i32gather_epi64", header: "immintrin.h".}
proc mask_i32gather_epi64*(src: m256i; base_addr: ptr int64; vindex: m128i; mask: m256i;
                          scale: cint): m256i {.
    importc: "_mm256_mask_i32gather_epi64", header: "immintrin.h".}
proc i32gather*(base_addr: ptr cdouble; vindex: m128i; scale: cint): m128d {.
    importc: "_mm_i32gather_pd", header: "immintrin.h".}
proc mask_i32gather*(src: m128d; base_addr: ptr cdouble; vindex: m128i; mask: m128d;
                    scale: cint): m128d {.importc: "_mm_mask_i32gather_pd",
                                       header: "immintrin.h".}
proc i32gather*(base_addr: ptr cdouble; vindex: m128i; scale: cint): m256d {.
    importc: "_mm256_i32gather_pd", header: "immintrin.h".}
proc mask_i32gather*(src: m256d; base_addr: ptr cdouble; vindex: m128i; mask: m256d;
                    scale: cint): m256d {.importc: "_mm256_mask_i32gather_pd",
                                       header: "immintrin.h".}
proc i32gather*(base_addr: ptr cfloat; vindex: m128i; scale: cint): m128 {.
    importc: "_mm_i32gather_ps", header: "immintrin.h".}
proc mask_i32gather*(src: m128; base_addr: ptr cfloat; vindex: m128i; mask: m128;
                    scale: cint): m128 {.importc: "_mm_mask_i32gather_ps",
                                      header: "immintrin.h".}
proc i32gather*(base_addr: ptr cfloat; vindex: m256i; scale: cint): m256 {.
    importc: "_mm256_i32gather_ps", header: "immintrin.h".}
proc mask_i32gather*(src: m256; base_addr: ptr cfloat; vindex: m256i; mask: m256;
                    scale: cint): m256 {.importc: "_mm256_mask_i32gather_ps",
                                      header: "immintrin.h".}
proc i64gather_epi32*(base_addr: ptr cint; vindex: m128i; scale: cint): m128i {.
    importc: "_mm_i64gather_epi32", header: "immintrin.h".}
proc mask_i64gather_epi32*(src: m128i; base_addr: ptr cint; vindex: m128i; mask: m128i;
                          scale: cint): m128i {.
    importc: "_mm_mask_i64gather_epi32", header: "immintrin.h".}
proc i64gather_epi32*(base_addr: ptr cint; vindex: m256i; scale: cint): m128i {.
    importc: "_mm256_i64gather_epi32", header: "immintrin.h".}
proc mask_i64gather_epi32*(src: m128i; base_addr: ptr cint; vindex: m256i; mask: m128i;
                          scale: cint): m128i {.
    importc: "_mm256_mask_i64gather_epi32", header: "immintrin.h".}
proc i64gather_epi64*(base_addr: ptr int64; vindex: m128i; scale: cint): m128i {.
    importc: "_mm_i64gather_epi64", header: "immintrin.h".}
proc mask_i64gather_epi64*(src: m128i; base_addr: ptr int64; vindex: m128i; mask: m128i;
                          scale: cint): m128i {.
    importc: "_mm_mask_i64gather_epi64", header: "immintrin.h".}
proc i64gather_epi64*(base_addr: ptr int64; vindex: m256i; scale: cint): m256i {.
    importc: "_mm256_i64gather_epi64", header: "immintrin.h".}
proc mask_i64gather_epi64*(src: m256i; base_addr: ptr int64; vindex: m256i; mask: m256i;
                          scale: cint): m256i {.
    importc: "_mm256_mask_i64gather_epi64", header: "immintrin.h".}
proc i64gather*(base_addr: ptr cdouble; vindex: m128i; scale: cint): m128d {.
    importc: "_mm_i64gather_pd", header: "immintrin.h".}
proc mask_i64gather*(src: m128d; base_addr: ptr cdouble; vindex: m128i; mask: m128d;
                    scale: cint): m128d {.importc: "_mm_mask_i64gather_pd",
                                       header: "immintrin.h".}
proc i64gather*(base_addr: ptr cdouble; vindex: m256i; scale: cint): m256d {.
    importc: "_mm256_i64gather_pd", header: "immintrin.h".}
proc mask_i64gather*(src: m256d; base_addr: ptr cdouble; vindex: m256i; mask: m256d;
                    scale: cint): m256d {.importc: "_mm256_mask_i64gather_pd",
                                       header: "immintrin.h".}
proc i64gather*(base_addr: ptr cfloat; vindex: m128i; scale: cint): m128 {.
    importc: "_mm_i64gather_ps", header: "immintrin.h".}
proc mask_i64gather*(src: m128; base_addr: ptr cfloat; vindex: m128i; mask: m128;
                    scale: cint): m128 {.importc: "_mm_mask_i64gather_ps",
                                      header: "immintrin.h".}
proc i64gather*(base_addr: ptr cfloat; vindex: m256i; scale: cint): m128 {.
    importc: "_mm256_i64gather_ps", header: "immintrin.h".}
proc mask_i64gather*(src: m128; base_addr: ptr cfloat; vindex: m256i; mask: m128;
                    scale: cint): m128 {.importc: "_mm256_mask_i64gather_ps",
                                      header: "immintrin.h".}
proc insert_epi16*(a: m256i; i: int16; index: cint): m256i {.
    importc: "_mm256_insert_epi16", header: "immintrin.h".}
proc insert_epi32*(a: m256i; i: int32; index: cint): m256i {.
    importc: "_mm256_insert_epi32", header: "immintrin.h".}
